# tvml

./: .gitignore  00_all.sh  01_prepare.sh  02_main.sh  Dockerfile  absolute_defence_line.yaml  docker-compose.yml  model_config.yaml.sample  pyproject.toml  requirements.txt  static_tokens.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
conf/: .gitignore  absolute_defence_line.yaml  channels.yaml  genres.yaml
src/: common_genre.py  common_mecab.py  main.py  prepare.py  prepare1.py  prepare2.py  prepare_core.py  prepare_mecab.py  recommend.py  test.py  test2.py
